# blisp

./: Cargo.toml  README.md  coq.rs  history.md
docs/: Makefile  index.adoc  index.html  index.ja.adoc  index.ja.html
embed_macro/: Cargo.toml  LICENSE  README.md
embed_macro/src/: lib.rs
embed_macro/tests/: 01-parse.rs
specification/: Makefile  language.md  typing.out  typing.tex
src/: coq.rs  lib.rs  macro.rs  parser.rs  prelude.blisp  prelude.lisp  runtime.rs  semantics.rs
tests/: embedded.rs  transpile.rs
