[package]
name = "blisp"
version = "0.1.5"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.3.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false}

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[lib]
crate-type = ["rlib"]
