[package]
name = "blisp"
version = "0.2.0"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2018"
description = "A lisp like statically typed programing language for no_std."
license = "MIT"
repository = "https://github.com/ytakano/blisp"
keywords = ["no_std", "scripting", "scripting-engine", "scripting-language", "embedded" ]
categories = [ "no-std", "embedded" ]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.num-bigint]
version = "0.3"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[lib]
crate-type = ["rlib"]
