[package]
name = "blisp_embedded"
version = "0.1.1"
authors = ["Yuuki Takano <ytakanoster@gmail.com>", "Fumiya Saito"]
edition = "2021"
description = "embedded macro for BLisp"
repository = "https://github.com/ytakano/blisp"
keywords = [
    "no_std",
    "scripting",
    "scripting-engine",
    "scripting-language",
    "embedded",
]
categories = ["no-std", "embedded"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://ytakano.github.io/blisp/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.7"
